Final changes and styling

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <h1>Etch-A-Sketch</h1>
-    <button id="new-grid">New Grid</button>
+    <div class="flex-container"><button id="new-grid">New Grid</button></div>
     <div class="container"></div>
-    <p>Sketching Pad</p>
+    <div class="label">Sketching Pad</div>
     <script src="script.js"></script>
   </body>
 </html>
